<!--
  ~    Copyright (C) 2018 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Android-MVP-Sample-Application</string>
    <string name="load_data">Login</string>
    <string name="signup">Update</string>
    <string name="no_network">Network Not Found</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_phone_number">Enter mobile number</string>
    <string name="enter_user_name">Enter User name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_valid_emailid">Enter Valid Email ID</string>
    <string name="okay">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="proceed">Proceed</string>
    <string name="otp">One Time Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_valid_otp">Invalid OTP</string>
    <string name="update_details">Update Details</string>
    <string name="resend_otp_successfully">OTP Resend Successfully</string>

</resources>
