<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="false">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorWhite"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.amitshekhar.example.utils.fonts.CustomTextView
                android:id="@+id/custom_otp_alert_txtview_enter_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/enter_otp"
                android:textColor="@color/colorBlack"
                android:textSize="23sp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/custom_otp_alert_txtinput_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_otp_alert_txtview_enter_otp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:padding="5dp">

                <com.amitshekhar.example.utils.fonts.CustomTextEditText
                    android:id="@+id/textedit_login_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:inputType="phone"
                    android:maxLength="5"
                    android:textColor="@color/colorBlack"
                    android:textColorHighlight="@color/colorGreen"
                    android:textColorHint="@color/colorGreen"
                    android:textColorLink="@color/colorGreen"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/custom_otp_alert_rv_resendotp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_below="@+id/custom_otp_alert_txtinput_otp"
                android:layout_height="wrap_content">

                <com.amitshekhar.example.utils.fonts.CustomTextView
                    android:id="@+id/custom_otp_alert_txtview_resendotp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorGreen"
                    android:textSize="15sp" />

            </RelativeLayout>




            <com.amitshekhar.example.utils.fonts.CustomButton
                android:id="@+id/custom_otp_alert_btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_otp_alert_rv_resendotp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_round_button_inactive"
                android:enabled="false"
                android:text="@string/proceed"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>