<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/custom_alert_okay_cancel_img_logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/flutterlogo" />

            <com.amitshekhar.example.utils.fonts.CustomTextView
                android:id="@+id/custom_alert_okay_cancel_txtview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_alert_okay_cancel_img_logo"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/custom_alert_okay_cancel_txtview_title"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="4">


                <com.amitshekhar.example.utils.fonts.CustomButton
                    android:id="@+id/custom_alert_okay_cancel_btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/custom_round_button"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <com.amitshekhar.example.utils.fonts.CustomButton
                    android:id="@+id/custom_alert_okay_cancel_btn_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    android:background="@drawable/custom_round_button"
                    android:text="@string/okay"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </LinearLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>